After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752318 - Image jitter and no sound when streaming H.264
Image jitter and no sound when streaming H.264
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-13 11:19 UTC by Cedric Bhihe
Modified: 2016-04-15 13:50 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Cedric Bhihe 2015-07-13 11:19:20 UTC
(Please bear with me as I am close to new to this and I do not even know whether this IS a bug.)

Environment: Ubuntu 14.04.2 with kernel 3.16.0-43-generic on x86_64 Intel duo core
Install: totem 3.10.1-1ubuntu4 with all optional add-ons from USC.
         gstreamer0.10-plugins-bad-multiverse 0.10.21-1ubuntu3
         gstreamer0.10-plugins-bad 0.10.23-7.2ubuntu1.1
         gstreamer0.10-plugins-ugly 0.10.19-2ubuntu5

I have seen bugs 482660 and 728655. Both seems somewhat related to what follows. 

As I stream:
http://delive.artestras.cshls.lldns.net/artestras/delive/delive/delive_925.m3u8
I first get approx 5s of perfect image and sound followed by frozen image and zero sound. The image may later thaw every 15 seconds or so, jumps and freezes again immediately. Sound does not come back. Stopping the stream and restarting it, causes the exact same thing to happen again.

No problem whatsoever with VLC using H264-MPEG-4 AVC (part10) for either sound or video signal.

I am ready to help with debugging or whatever, if properly coached. 
Thank you.
Comment 1 Cedric Bhihe 2015-07-13 11:47:01 UTC
COMMENT #1:
As suggested in Bug 728655 I tried:
> gst-play-1.0 http://delive.artestras.cshls.lldns.net/artestras/delive/delive/delive_925.m3u8

It works like a charm. So to recap:
VLC works perfectly and so does gstreamer with no GUI. Does that point to totem as the trouble-maker ?
Comment 2 Bastien Nocera 2015-07-13 13:26:42 UTC
Bug 750808 again?

(You'll probably want to upgrade from the 1.5 year-old versions in your distribution).
Comment 3 Cedric Bhihe 2015-07-13 14:54:28 UTC
Thanks Bastien, 

Do you mean that I ought to upgrade from the current drivers for my GPU chipset as suggested at the end of bug 750808 ? Or something else ? Can you be more specific ?

If that's it (which somehow I doubt) I am using X.Org X server from xserver-xorg-video-nouveau for my NVIDIA G84GLM [Quadro FX 570M]. It is up to date.

If you are talking about the 3.10.1 version of the totem package I have installed, I am basically using what's on Ubuntu Soft Center. I just imagined it was in sync with my kernel version and thought nothing of it. I usually upgrade only when I need a new feature, not because I want the shiniest and latest. I usually don't. 

So let me know what you meant. Why and what do you think I should upgrade ?
Comment 4 Cedric Bhihe 2015-07-13 15:06:17 UTC
@Bastien_Nocera: If I try opening `totem 3.14.2-0ubuntu1~ppa1` with USC from the page:
http://www.ubuntuupdates.org/package/ubuntu-desktop_ppa/vivid/main/base/totem

I get:
Error: Breaks existing package 'totem-mozilla' dependency (=3.10.1-1ubuntu4)

which is along the line of what I expected. I am sure you have seen that a zillion times. Was that what you meant me to do ? 
If totem 3.10 is still supported, I would rather go that route and stick to Tusty 14.04.2 LTS.
Comment 5 Bastien Nocera 2015-07-15 09:57:34 UTC
Never mind comment 2, I skipped over the bug content, and went from the bug title.

Looks line a problem parsing the playlist.
Comment 6 Cedric Bhihe 2015-07-15 10:17:30 UTC
ok. One thing less to worry about. 
So where do I go from here ? I am sure I am not the only one to experience this particular problem. Can someone offer advice on how to trouleshoot this ?
Comment 7 Bastien Nocera 2015-07-15 10:50:11 UTC
(In reply to Cedric Bhihe from comment #6)
> ok. One thing less to worry about. 
> So where do I go from here ? I am sure I am not the only one to experience
> this particular problem.

Hmm, you wait :)
Comment 8 Bastien Nocera 2016-04-15 13:50:19 UTC
commit 32b2a71e3bd0b1fae5e94db92816aeddf7934f3e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Apr 15 14:38:02 2016 +0200

    plparse: Don't consider M3U playlists as text/plain
    
    Until we have support for private inheritance in shared-mime-info, we
    cannot simply ignore HLS playlists as if it were a text file, when
    we should pass it on to the player to handle directly.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752318