plparse: Don't consider M3U playlists as text/plain

Until we have support for private inheritance in shared-mime-info, we
cannot simply ignore HLS playlists as if it were a text file, when
we should pass it on to the player to handle directly.

https://bugzilla.gnome.org/show_bug.cgi?id=752318